Finished 2.Moving_Mouse tasks

--- a/2.Browser_Document_Events/3.UI_Events/2.Moving_Mouse/task2/index.html
+++ b/2.Browser_Document_Events/3.UI_Events/2.Moving_Mouse/task2/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang='en'>
-<head>
-    <meta charset='UTF-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src='./script.js' defer></script>
-    <link rel='stylesheet' href='./styles.css'>
-</head>
-<body>
-</body>
+    <script src="./script.js" defer></script>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <div id="elem" class="clock">
+      <span class="hours">12</span> : <span class="minutes">30</span> :
+      <span class="seconds">00</span>
+    </div>
+
+    <div id="tooltip" hidden>Tooltip</div>
+  </body>
 </html>
